# nlp_ean

./: .gitignore  pyproject.toml
Cuadernos/Auxiliares/: 1.1 Preprocesamiento Texto MPP.ipynb  1.2 TF_IDF.ipynb  1.3 Word2Vec MPP.ipynb  1.4 Modelo simple de clasificación.ipynb  1_1_Preprocesamiento_Texto_MPP.ipynb  2.1 RNN MPP.ipynb  2.1 RNN en PLN.ipynb  2.1 RNN.ipynb  2.2 LSTM.ipynb  2.3 Mejorando Rendimiento RNN LSTM.ipynb  2.4 Generacion_Texto_Cien_Años_Soledad.ipynb  3.1 transformers_llms_notebook.ipynb  3.2 Bert_gpt.ipynb  3.2 bert gpt.ipynb  3.2 bert_gpt.ipynb  3.3 Ejercicios.ipynb  Modelo simple de clasificación.ipynb  Preprocesamiento Texto.ipynb  Word2Vec.ipynb  gabriel_garcia_marquez_cien_annos_soledad.txt
Cuadernos/Auxiliares/.ipynb_checkpoints/: 1.1 Preprocesamiento Texto MPP-checkpoint.ipynb
Cuadernos/Guia 1/: Actividad_1_Preprocesamiento_y_tokenización.ipynb  Informe_Plantilla.MD
Cuadernos/Guia 2/: Actividad_2_Clasificacion_Noticias.ipynb  Informe_Plantilla.MD
Cuadernos/Guía 3/: Actividad_3_Transformers.ipynb  Informe_Plantilla.MD
Datos/Datos Crudos/: CAS.txt  corpus_chismofilias.csv  reviews_booking_limpio.csv
