[tool.poetry]
name = "nlp-ean"
version = "0.1.0"
description = "Administrador de dependencias para el proyecto de nlp_ean"
authors = ["izainea <cizaineam@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
pandas = "^2.2.2"
nltk = "^3.8.1"
gensim = "^4.3.2"
numpy = ">=1.19.5,<1.27.0"
scikit-learn = "^1.5.0"
scipy = "1.12.*"
openpyxl = "^3.1.4"
seaborn = "^0.13.2"
transformers = {extras = ["torch"], version = "^4.41.2"}
torch = "^2.3.1"
accelerate = "^0.31.0"
datasets = "^2.20.0"
spacy = "2.*"
keras = "3.*"
tensorflow-io-gcs-filesystem = "0.31.*"
tensorflow = "^2.18.0"
keras-preprocessing = "^1.1.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
